# lib/api-spec/openapi.yaml
@@ -601,6 +601,10 @@ components:
         photoLink:
           type: string
           nullable: true
+        inDate:
+          type: string
+          format: date-time
+          nullable: true
 
     WorkflowStep:
       type: object
